# scrapy-boilerplate

./: .docker_env.example  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  deploy.py  deploy.sh  docker-compose.yml  example.gitlab-ci.yml  install.sh  proxy_list.example.json  pyproject.toml
src/python/src/: .isort.cfg  execute.py  install.sh  pm2.config.example.js  pyproject.toml  settings.py
src/python/src/commands/: __init__.py  base_command.py  base_csv_exporter.py  base_reactor_command.py
src/python/src/commands/base/: __init__.py  base_command.py  base_csv_exporter.py  base_reactor_command.py  database_reactor_command.py
src/python/src/database/: env.py
src/python/src/direct/: direct_db_connection_extension.py  direct_item.py  direct_spider.py  task.py
src/python/src/direct/examples/: __init__.py  direct_example_extension.py  direct_example_item.py  direct_example_spider.py
src/python/src/direct/extensions/: __init__.py  direct_db_connection_extension.py
src/python/src/direct/items/: __init__.py  direct_item.py
src/python/src/direct/pipelines/: __init__.py  direct_pipeline.py  direct_rmq_pipeline.py
src/python/src/direct/signals/: __init__.py  direct_signals.py
src/python/src/direct/spiders/: __init__.py  direct_spider.py
src/python/src/direct/utils/: __init__.py  direct_errback.py  direct_status_codes.py  direct_task.py  direct_tasks_queue.py
src/python/src/helpers/: __init__.py
src/python/src/helpers/handlers/: rotating_proxies_download_handler.py
src/python/src/middlewares/: __init__.py  delayed_requests_middleware.py  forward_meta_middleware.py  http_proxy_middleware.py  proxy_rotation_middleware.py
src/python/src/pipelines/: __init__.py  base_db_pipeline.py
src/python/src/rmq/commands/: __init__.py  consumer.py  producer.py
src/python/src/rmq/connections/: pika_select_connection.py
src/python/src/rmq/examples/: single_inheritor.py
src/python/src/rmq/exceptions/: __init__.py
src/python/src/rmq/extensions/: rpc_task_consumer.py
src/python/src/rmq/middlewares/: __init__.py  delivery_tag_spider_middleware.py  task_toss_spider_middleware.py
src/python/src/rmq/pipelines/: item_producer_pipeline.py
src/python/src/rmq/signals/: item_scheduled.py
src/python/src/rmq/spiders/: __init__.py  httpbin_spider.py  task_base_spider.py  task_to_multiple_results_spider.py  task_to_single_result_spider.py
src/python/src/rmq/utils/: datetime_processor.py  extract_delivery_tag_from_failure.py  import_full_name.py  json_processor.py  rmq_default_options.py  sql_expressions.py  task.py  task_observer.py  task_status_codes.py
src/python/src/rmq_alternative/: __init__.py  base_producer_pipeline.py  base_rmq_spider.py  rmq_spider.py
src/python/src/rmq_alternative/middlewares/: rmq_request_exception_checker_middleware.py
src/python/src/rmq_alternative/utils/: pika_blocking_connection.py  pika_connection_parameters.py  signals.py
src/python/src/rmq_new/: base_rmq_spider.py  rmq_spider.py
src/python/src/rmq_new/utils/: pika_blocking_connection.py
src/python/src/rmq_twisted/connections/: twisted_connection.py  twisted_consumer.py  twisted_producer.py  twisted_spider_consumer.py
src/python/src/spiders/: example_spider.py  example_twisted_rmq_spider.py  my_spider.py
src/python/src/utils/: __init__.py  file_saver.py  get_import_full_name.py  get_response_or_request.py  graceful_shutdown.py  mysql_connection_string.py  strtobool.py
(+304 files in other folders)
